--- a/cspinner/src/main/AndroidManifest.xml
+++ b/cspinner/src/main/AndroidManifest.xml
@@ -8,6 +8,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CSpinner"></application>
+        android:theme="@style/Theme.CSpinner">
 
+
+    </application>
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:resizeable="true"
+        android:smallScreens="true" />
 </manifest>
